package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "AppRegPB";

message AppReg{
    required string source_identify = 1;
    required string topic = 2;
    required int64 reg_ts = 3;
}